High: stonithd: ais support
- basic ais support
- support for building with pacemaker
- building now depends on both pacemaker-dev and heartbeat-dev

--- a/lib/fencing/Makefile.am
+++ b/lib/fencing/Makefile.am
@@ -26,8 +26,7 @@ INCLUDES         = -I$(top_builddir)/include  -I$(top_srcdir)/include     \
 halibdir	 =  $(libdir)/@HB_PKG@
 havarlibdir      =  $(localstatedir)/lib/@HB_PKG@
 
-COMMONLIBS	 =  $(top_builddir)/lib/clplumbing/libplumb.la   \
-		    $(top_builddir)/lib/hbclient/libhbclient.la  \
+COMMONLIBS	 =  -lplumb -lhbclient \
 		    $(GLIBLIB)
 
 lib_LTLIBRARIES = libstonithd.la
