--- a/fencing/stonithd/Makefile.am
+++ b/fencing/stonithd/Makefile.am
@@ -21,23 +21,21 @@ MAINTAINERCLEANFILES = Makefile.in
 INCLUDES         = -I$(top_builddir)/include  -I$(top_srcdir)/include     \
                    -I$(top_builddir)/libltdl  -I$(top_srcdir)/libltdl     \
 		   -I$(top_builddir)/linux-ha -I$(top_srcdir)/linux-ha    \
-		   -I$(top_builddir)          -I$(top_srcdir)
+		   -I$(top_builddir)          -I$(top_srcdir) \
+		   -I$(AISPREFIX)/include/openais
 
 apigid		 = @HA_APIGID@
 halibdir	 =  $(libdir)/@HB_PKG@
 havarlibdir      =  $(localstatedir)/lib/@HB_PKG@
 
-COMMONLIBS	 =  $(top_builddir)/lib/clplumbing/libplumb.la   \
-		    $(top_builddir)/lib/hbclient/libhbclient.la  \
-                    $(top_builddir)/lib/pils/libpils.la		\
-		    $(top_builddir)/lib/stonith/libstonith.la	\
-		    $(top_builddir)/lib/apphb/libapphb.la	\
-		    $(GLIBLIB)
-
 halib_PROGRAMS   =  stonithd
 stonithd_SOURCES =  stonithd.c
-stonithd_LDFLAGS = $(COMMONLIBS) @LIBLTDL@  \
-		   $(top_builddir)/lib/fencing/libstonithd.la
+stonithd_LDFLAGS = @LIBLTDL@ -L$(prefix)/lib/pils \
+           -L$(prefix)/lib/stonith -L$(prefix)/lib/apphb \
+           -L$(prefix)/lib/crm/common \
+           $(top_builddir)/lib/fencing/libstonithd.la
+stonithd_LDADD = $(GLIBLIB) $(CLUSTERLIBS) -lplumb -lpils -lapphb -lstonith \
+           -lcrmcluster -lcrmcommon
 
 AM_CFLAGS = $(INCLUDES)
 
